--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ h6 {
 
 /* PHP Email Form Messages
 ------------------------------*/
-.php-email-form .error-message {
+/* .php-email-form .error-message {
   display: none;
   background: #df1529;
   color: #ffffff;
@@ -97,7 +97,7 @@ h6 {
   padding: 15px;
   margin-bottom: 24px;
   font-weight: 600;
-}
+} */
 
 .php-email-form .sent-message {
   display: none;
